--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -26,7 +26,8 @@
                 {% if user %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{ user.name }}
+                        <img src="{{ user.avatar.getThumb(32, 32, { mode : 'crop' } )}}" class="rounded-circle" alt="{{ user.name }} avatar" />
+                        <span>{{ user.name }}</span>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown01">
                         <li><a class="dropdown-item" href="{{ 'account'|page }}">My account</a></li>
