--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -9,10 +9,15 @@
 
         <div class="navbar-collapse offcanvas-collapse" id="headerNavbar">
 
-            <ul class="navbar-nav navbar-nav-icons me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav navbar-nav-icons mx-auto mb-2 mb-lg-0">
                 <li class="nav-item mx-2 {% if this.page.id == 'home' %}active{% endif %}">
                     <a class="nav-link" aria-current="page" href="{{ 'home'|page }}">
                         <i class="fas fa-home"></i>
+                    </a>
+                </li>
+                <li class="nav-item mx-2 {% if this.page.id == 'explore' %}active{% endif %}">
+                    <a class="nav-link" aria-current="page" href="{{ 'explore'|page }}">
+                        <i class="fas fa-compass"></i>
                     </a>
                 </li>
                 <li class="nav-item mx-2 {% if this.page.id == 'friends' %}active{% endif %}">
