--- a/layouts/default.htm
+++ b/layouts/default.htm
@@ -34,6 +34,7 @@ description = "Default layout"
 
         <!-- Scripts -->
         <script src="{{ [
+            'assets/vendor/popper/js/popper.js',
             'assets/vendor/bootstrap/js/bootstrap.js'
             ]|theme }}"></script>
         <script src="{{ [
