--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -1,17 +1,40 @@
-#headerNavbar {
-    .navbar-nav-icons {
-        .nav-item i {
-            font-size: 24px;
-        }
-
-        .nav-item.active {
-            i {
-                color: #db6a26;
-            }
-        }
-    }
+body {
+  background: #f1f3fa;
 }
 
-#layout-content {
-    margin-top: 120px;
+header {
+  .navbar-nav-icons {
+    .nav-item i {
+      font-size: 24px;
+    }
+
+    .nav-item.active {
+      a {
+        color: #db6a26;
+      }
+    }
+  }
+}
+
+main {
+  > .container {
+    padding: 120px 45px 0;
+  }
+}
+
+// User Sidebar
+
+#user-sidebar {
+  .user-avatar {
+    img {
+      margin: 0 auto;
+      width: 50%;
+    }
+  }
+  .nav-item.active {
+    border-left: 3px solid #db6a26;
+    a {
+      color: #db6a26;
+    }
+  }
 }
