--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -1,13 +1,13 @@
 ==
-<!-- Nav -->
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Socialize</a>
-            <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+<header>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Socialize</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-
-        <div class="navbar-collapse offcanvas-collapse" id="headerNavbar">
+        <div class="collapse navbar-collapse" id="navbarCollapse">
 
             <ul class="navbar-nav navbar-nav-icons mx-auto mb-2 mb-lg-0">
                 <li class="nav-item mx-2 {% if this.page.id == 'home' %}active{% endif %}">
@@ -18,11 +18,6 @@
                 <li class="nav-item mx-2 {% if this.page.id == 'explore' %}active{% endif %}">
                     <a class="nav-link" aria-current="page" href="{{ 'explore'|page }}">
                         <i class="fas fa-compass"></i>
-                    </a>
-                </li>
-                <li class="nav-item mx-2 {% if this.page.id == 'friends' %}active{% endif %}">
-                    <a class="nav-link" href="{{ 'friends'|page }}">
-                        <i class="fas fa-user-friends"></i>
                     </a>
                 </li>
             </ul>
@@ -44,7 +39,7 @@
                 <li class="nav-item"><a href="/login">Login</a></li>
                 {% endif %}
             </ul>
-
         </div>
-    </div>
-</nav>
+      </div>
+    </nav>
+</header>
